# audioFeatureExtraction

./: .gitignore  CMakeLists.txt  README.md  audio_features_debug  get_dev_sample_rate.cpp  graphShit.py  micDebug  notes.txt  portaudio_debug_mic.cpp  sample  test_audio_features.py  test_portaudio_capture.py  test_wav_player.py
audio_playback/: audio_read  audio_read.cpp  wav_player.h
fftw-3.3.10/: Makefile  config.h  config.status  fftw3l.pc  libfftw3l.la  libtool
fftw-3.3.10/.libs/: libfftw3.so.3.6.10
fftw-3.3.10/api/: Makefile
fftw-3.3.10/dft/: Makefile
fftw-3.3.10/dft/scalar/: Makefile
fftw-3.3.10/dft/scalar/codelets/: Makefile
fftw-3.3.10/dft/simd/: Makefile
fftw-3.3.10/dft/simd/altivec/: Makefile
fftw-3.3.10/dft/simd/avx/: Makefile
fftw-3.3.10/dft/simd/avx-128-fma/: Makefile
fftw-3.3.10/dft/simd/avx/.deps/: genus.Plo  n1bv_10.Plo  n1bv_11.Plo  n1bv_12.Plo  n1bv_128.Plo  n1bv_13.Plo  n1bv_14.Plo  n1bv_15.Plo  n1bv_16.Plo  n1bv_2.Plo  n1bv_20.Plo  n1bv_25.Plo  n1bv_3.Plo  n1bv_32.Plo  n1bv_4.Plo  n1bv_5.Plo  n1bv_6.Plo  n1bv_64.Plo  n1bv_7.Plo  n1bv_8.Plo  n1bv_9.Plo  n1fv_10.Plo  n1fv_11.Plo  n1fv_12.Plo  n1fv_128.Plo  n1fv_13.Plo  (+145 more)
fftw-3.3.10/dft/simd/avx2/: Makefile
fftw-3.3.10/dft/simd/avx2-128/: Makefile
fftw-3.3.10/dft/simd/avx512/: Makefile
fftw-3.3.10/dft/simd/common/: Makefile
fftw-3.3.10/dft/simd/generic-simd128/: Makefile
fftw-3.3.10/dft/simd/generic-simd256/: Makefile
fftw-3.3.10/dft/simd/kcvi/: Makefile
fftw-3.3.10/dft/simd/neon/: Makefile
fftw-3.3.10/dft/simd/sse2/: Makefile
fftw-3.3.10/dft/simd/vsx/: Makefile
fftw-3.3.10/doc/: Makefile
fftw-3.3.10/doc/FAQ/: Makefile
fftw-3.3.10/genfft/: Makefile
fftw-3.3.10/kernel/: Makefile
fftw-3.3.10/libbench2/: Makefile
fftw-3.3.10/m4/: Makefile
fftw-3.3.10/mpi/: Makefile
fftw-3.3.10/rdft/: Makefile
fftw-3.3.10/rdft/scalar/: Makefile
fftw-3.3.10/rdft/scalar/r2cb/: Makefile
fftw-3.3.10/rdft/scalar/r2cf/: Makefile
fftw-3.3.10/rdft/scalar/r2r/: Makefile
fftw-3.3.10/rdft/simd/: Makefile
fftw-3.3.10/rdft/simd/altivec/: Makefile
fftw-3.3.10/rdft/simd/avx/: Makefile
fftw-3.3.10/rdft/simd/avx-128-fma/: Makefile
fftw-3.3.10/rdft/simd/avx2/: Makefile
fftw-3.3.10/rdft/simd/avx2-128/: Makefile
fftw-3.3.10/rdft/simd/avx512/: Makefile
fftw-3.3.10/rdft/simd/common/: Makefile
fftw-3.3.10/rdft/simd/generic-simd128/: Makefile
fftw-3.3.10/rdft/simd/generic-simd256/: Makefile
fftw-3.3.10/rdft/simd/kcvi/: Makefile
fftw-3.3.10/rdft/simd/neon/: Makefile
fftw-3.3.10/rdft/simd/sse2/: Makefile
fftw-3.3.10/rdft/simd/vsx/: Makefile
fftw-3.3.10/reodft/: Makefile
fftw-3.3.10/simd-support/: Makefile
fftw-3.3.10/support/: Makefile
fftw-3.3.10/tests/: Makefile  bench
fftw-3.3.10/tests/.libs/: bench
fftw-3.3.10/threads/: Makefile  libfftw3_threads.la  libfftw3l_threads.la
fftw-3.3.10/threads/.deps/: libfftw3f_threads_la-api.Plo  libfftw3f_threads_la-conf.Plo  libfftw3f_threads_la-ct.Plo  libfftw3f_threads_la-dft-vrank-geq1.Plo  libfftw3f_threads_la-f77api.Plo  libfftw3f_threads_la-hc2hc.Plo  libfftw3f_threads_la-rdft-vrank-geq1.Plo  libfftw3f_threads_la-threads.Plo  libfftw3f_threads_la-vrank-geq1-rdft2.Plo  libfftw3l_threads_la-api.Plo  libfftw3l_threads_la-conf.Plo  libfftw3l_threads_la-ct.Plo  libfftw3l_threads_la-dft-vrank-geq1.Plo  libfftw3l_threads_la-f77api.Plo  libfftw3l_threads_la-hc2hc.Plo  libfftw3l_threads_la-rdft-vrank-geq1.Plo  libfftw3l_threads_la-threads.Plo  libfftw3l_threads_la-vrank-geq1-rdft2.Plo
fftw-3.3.10/threads/.libs/: libfftw3_threads.lai  libfftw3_threads.so.3.6.10  libfftw3_threads.so.3.6.10T
fftw-3.3.10/tools/: Makefile  fftw-wisdom  fftwl-wisdom
fftw-3.3.10/tools/.deps/: fftwf_wisdom-fftw-wisdom.Po  fftwl_wisdom-fftw-wisdom.Po
fftw-3.3.10/tools/.libs/: fftw-wisdom
include/: fft_stft.hpp  portaudio_capture.hpp  wav_player.h
pyaudio_portaudio_test/: audio_read.py
src/: audio_features.cpp  fft_stft  fft_stft.cpp  portaudio_capture.cpp  valgrind_test_audio_features.cpp  wav_player.cpp  wav_player_pybind.cpp
test_scripts/: audioFeatures.cpp  example.cpp  example.py  hello_world  setup.py
test_scripts/my_bindings_project/: CMakeLists.txt  example.cpp
(+593 files in other folders)
